--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ html {
         <meta name="viewport" content="width=device-width, initial-scale=0.1">
         <img style="margin:0!important; pading:0!important" >
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&display=swap" rel="stylesheet"> 
@@ -184,17 +184,17 @@ html {
         <!-----media------>
         
         <h1 style="color:#3a4253" class="course2">Social Media</h1>
-       <div class="wrapper">
-         <div class="button">
-             <a href="https://www.facebook.com/mcchaoscraft" target="_blank">
+         <div class="wrapper">
+           <div class="button">
+             <a href="https://x.com/CapellaStudio" target="_blank">
             <div class="icon">
-               <i class="fab fa-facebook-f"></i>
+             <i class="fab" aria-hidden="true">X</i>
             </div>
-            <span>soon</span>
+            <span>X Twitter</span>
             </a>
          </div>
          <div class="button">
-             <a href="https://discord.gg/JDQXaFr7VQ" target="_blank">
+             <a href="" target="_blank">
             <div class="icon">
                <i class="fab fa-discord"></i>
             </div>
@@ -202,7 +202,7 @@ html {
             </a>
          </div>
            <div class="button">
-             <a href="https://youtu.be/Lmw4lzjEqD8" target="_blank">
+             <a href="" target="_blank">
             <div class="icon">
                <i class="fab fa-youtube"></i>
             </div>
